--- a/css/style.css
+++ b/css/style.css
@@ -1,134 +1,10 @@
 /* GLOBAL */
 
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-    font-size: 10px;
-}
-
-html {
-    height: 100%;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    line-height: 2.8rem;
-    font-size: 1.8rem;
-}
-
 
 /* CONTAINER */
 
-.container {
-    max-width: 144rem;
-    width: 100%;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 
 /* Header */
-
-.site-header {
-    background-color: #F1D1AE;
-}
-
-.site-header-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 40px;
-}
-
-.site-nav {
-    display: flex;
-    align-items: center;
-}
-
-.site-nav-item {
-    margin-left: 40px;
-    list-style: none;
-}
-
-.site-nav-item:first-child {
-    margin-left: 0;
-}
-
-.site-nav-link {
-    text-decoration: none;
-    color: #333;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    transition: 300ms ease;
-}
-
-.site-nav-link:hover {
-    color: #0A775F;
-}
-
-.landing {
-    display: flex;
-    align-items: center;
-}
-
-.landing-texts {
-    color: #000;
-    margin-left: 14rem;
-}
-
-.landing-title {
-    font-size: 6.4rem;
-    font-weight: 700;
-    line-height: 7.5rem;
-}
-
-.landing-text {
-    line-height: 2.4rem;
-    width: 46rem;
-    font-size: 1.8rem;
-    margin-top: 2.4rem;
-    margin-bottom: 3.4rem;
-}
-
-.landing-link {
-    text-decoration: none;
-    color: #fff;
-    padding: 1.6rem 2.4rem;
-    background: #0A775F;
-    border-radius: 100px;
-    font-size: 1.8rem;
-    letter-spacing: 1px;
-    font-weight: 500;
-    display: inline-block;
-    transition: 300ms ease;
-}
-
-.landing-link:hover {
-    color: #0A775F;
-    background-color: #fff;
-}
-
-.landing-images {
-    position: relative;
-    margin-top: 45px;
-    display: flex;
-}
-
-.second-land-img {
-    position: absolute;
-    top: -82px;
-    left: -92px;
-}
 
 
 /* MAIN CONTENT */
@@ -142,24 +18,6 @@ body {
     margin-top: 2rem;
     background-color: #F5F5EC;
     padding-top: 5rem;
-}
-
-.left-top {
-    position: absolute;
-    top: 20;
-    left: 0;
-}
-
-.left-bottom {
-    position: absolute;
-    top: 1263px;
-    left: 0;
-}
-
-.right {
-    position: absolute;
-    top: 685px;
-    right: 0;
 }
 
 .collection {
@@ -286,7 +144,7 @@ body {
     list-style: none;
 }
 
-.process-item:hover {
+.process-item:first-child {
     margin-left: 0;
 }
 
@@ -356,4 +214,14 @@ body {
     border-top: 3px dashed #C99B67;
     margin-top: -3rem;
     z-index: -1;
+}
+
+.word-cofe {
+    position: absolute;
+    top: -50px;
+    left: -50px;
+}
+
+.word-cofes {
+    position: relative;
 }
