--- a/create plan/style.scss
+++ b/create plan/style.scss
@@ -126,6 +126,13 @@
     margin-left: 25rem;
 }
 
+.drink-item-des {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
 .drink-title,
 .questins {
     font-size: 40px;
@@ -186,7 +193,8 @@ span {
     line-height: 34px;
 }
 
-.plan {
+.plan,
+.plans {
     font-size: 16px;
     color: #fff;
     padding: 1.6rem 2.4rem;
@@ -194,10 +202,10 @@ span {
     border-radius: 100px;
     margin-top: 2rem;
     display: inline-block;
-    text-decoration: none;
     font-weight: 500;
     line-height: 19px;
     letter-spacing: 1px;
+    border: none;
 }
 
 .create-plan {
